feat: add data preparation and plotting for Two Moons